--- a/styles/main.css
+++ b/styles/main.css
@@ -12,9 +12,8 @@ html {
  body {
      font-family: 'Roboto', sans-serif; /* sets our font to the "Open Sans" typeface */
      font-weight: 300px;
-     color: #4c4c4c;             /* sets the text color to white */
+     color: #4c4c4c;         
      min-height: 100%;  /* says the height of the body must be, at minimum, 100% of the window */
-     /*background: #4285f4; */
  }
 
 h1 {
@@ -22,76 +21,69 @@ h1 {
 }
  
  body.landing {
-    /* background-color: #4285f4; /* sets the background color to an RGB value (see below) */
-     min-height: 800px;
+     position: relative;
  }
 
-.container {
-    padding-bottom: 50px;
-    
+.bodyContainer {
+    padding-bottom: 150px;
+    min-height:100%;
+    position:relative;
 }
 
 .content {
     padding: 50px;
-    min-height: 600px;
+    /*min-height: 600px; */
 }
+
 /* -------- navigation styles ---------- */
 .navbar {
-    /*padding: 0.5rem;
-     /*background-color: #4c4c4c; */
+    position: relative; 
     background: #4285f4;
     color: white;
- }
- 
- .navbar .logo {
-     position: relative; /* positioning will be explained in a resource */
-     left: 2rem;
- }
-
-.navigation {
-    list-style: none;
-    margin: 0; 
-    border: 1px solid black;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-  
-    -webkit-flex-flow: row wrap;
-    justify-content: flex-start;
-}
+    padding: 0 20px;
+    font-weight: 500;
+    font-size: 22px;
     
-.navigation a {
-  text-decoration: none;
-  display: block;
-  padding: 1em;
-  color: white;
-}
-
-
-.navigation a:hover {
-  background: darken(deepskyblue, 2%);
-  text-decoration: underline;
-}
+ }
 
 #header-img {
     margin: 0 auto;
     display: inline-block;
-    width: 30%;
-    float:left; 
-/*    border: 1px solid black;*/
-    border-radius: 15px;
+    vertical-align: middle;
+    margin-top:15px;
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
 }
 
 #headerInfo {
-    margin: 0 auto;
-    font-weight: 500;
-    font-size: 32px;
+    display: inline-block;
 }
 
+.nav-links {
+    list-style: none;
+    vertical-align: middle;
+    margin: 0; 
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: flex-start;
+}
+
+.nav-links li:hover {
+    border-bottom: 5px solid #7b1fa2;
+    font-size: 22px;
+    color: #7b1fa2;
+}
+    
+.nav-links a {
+  text-decoration: none;
+  display: block;
+  padding: 1em;
+  color: white;
+}
 
 /* -------- myInfo styles ---------- */
 #myInfo {
@@ -100,23 +92,46 @@ h1 {
     padding: 10px; 
 }
 
+/* -------- page content styles ----------- */
+
+.left {
+    float:left; 
+    width:33%;
+    padding-bottom: 35px;
+    
+}
+
+.details {
+    /*display: none;*/
+    visibility: hidden;
+}
+
+.about-title {
+    font-size: 1.7em;
+    padding: 20px 0 10px 15px;
+}
+
+.about-text {
+    padding:0 15px;
+}
+
 /* -------------- Footer styles ---------------*/
 footer {
     width: 100%;
-    /*background-color: #d0d0d0; */
     height:150px;
-    /*margin: 0 auto; */
     padding: 30px;
-    margin-top: -50px;
-    border: 1px solid black;
+    position: absolute;
+    bottom:0;
+    
 }
 
 .social-icons {
     float:right;
-    padding:0 100px 20px 0;
+    padding:0 20px 20px 0;
 }
 
 #social {
+    border-top:10px solid #4285f4;
     
 }
 #social li {
@@ -168,46 +183,54 @@ footer {
   height: 0; }
 
 
+/* -------- Styles for tablet size devices ---------- */ 
 @media all and (max-width: 800px) {
    html { font-size: 120%; }
-  .navigation {
+    
+ /* -------- navigation styles ---------- */   
+  .nav-links {
     justify-content: space-around;
   }
 }
 
+
+/* -------- Styles for mobiles ---------- */ 
 @media all and (max-width: 600px) {
    html { font-size: 112%; }
-  .navigation {
+    
+/* -------- navigation styles ---------- */
+  .nav-links {
     -webkit-flex-flow: column wrap;
     flex-flow: column wrap;
     padding: 0;
+    width: 330px;
 }
   
-  .navigation a { 
+  .nav-links a { 
     text-align: center; 
     padding: 10px;
     border-top: 1px solid rgba(255,255,255,0.3); 
     border-bottom: 1px solid rgba(0,0,0,0.1); 
   }
   
-  .navigation li:last-of-type a {
+  .nav-links li:last-of-type a {
     border-bottom: none;
   }
     
-    #header-img {
-        width:100%;
+   #header-img {
         display:block;
         float:none;
+        margin: 0 auto;
+        padding-left: 20%;
     }
     
     #header-info {
-        width:100%;
         display:block;
     }
 
+/* -------------- Footer styles ---------------*/
   footer {
     width: 100%;
-    /*background-color: #d0d0d0; */
     height:150px;
     margin: 0 auto;
     padding: 10px;
