--- a/styles/main.css
+++ b/styles/main.css
@@ -1,43 +1,48 @@
-*, *::before, *::after {
-     -moz-box-sizing: border-box;
-     -webkit-box-sizing: border-box;
-     box-sizing: border-box;
- }
+*,
+*::before,
+*::after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
 html {
-     height: 100%; /* makes sure our HTML takes up 100% of the browser window */
-     font-size: 100%;
- }
- 
- body {
-     font-family: 'Roboto', sans-serif !important; /* sets our font to the "Open Sans" typeface */
-     font-weight: 300px;
-     color: #4c4c4c;         
-     min-height: 100%;  /* says the height of the body must be, at minimum, 100% of the window */
- }
+    height: 100%;
+    /* makes sure our HTML takes up 100% of the browser window */
+    font-size: 100%;
+}
+
+body {
+    font-family: 'Roboto', sans-serif !important;
+    font-weight: 300px;
+    color: #4c4c4c;
+    min-height: 100%;
+    /* says the height of the body must be, at minimum, 100% of the window */
+}
 
 h1 {
     font-weight: normal;
 }
- 
- body.landing {
-     position: relative;
- }
+
+body.landing {
+    position: relative;
+}
 
 .bodyContainer {
     padding-bottom: 150px;
-    min-height:100%;
-    position:relative;
+    min-height: 100%;
+    position: relative;
 }
 
 .content {
     padding: 50px;
-    /*min-height: 600px; */
 }
 
+
 /* -------- navigation styles ---------- */
+
 .aa-navbar {
-    position: relative; 
+    position: relative;
     background: #4285f4;
     color: white;
     padding: 0 20px;
@@ -47,7 +52,7 @@ h1 {
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
- }
+}
 
 .aa-HeaderImg {
     display: flex;
@@ -55,7 +60,6 @@ h1 {
 
 #aa-headerImg {
     vertical-align: middle;
-    
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
 }
@@ -67,7 +71,7 @@ h1 {
 .aa-navLinks {
     list-style: none;
     vertical-align: middle;
-    margin: 0; 
+    margin: 0;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -75,7 +79,6 @@ h1 {
     display: flex;
     -webkit-flex-flow: row wrap;
     justify-content: flex-start;
-    
 }
 
 .aa-navLinks li:hover {
@@ -83,28 +86,30 @@ h1 {
     font-size: 22px;
     color: #7b1fa2;
 }
-    
+
 .aa-navLinks a {
-  text-decoration: none;
-  display: block;
-  padding: 1em;
-  color: white;
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
 }
 
+
 /* -------- myInfo styles ---------- */
+
 #myInfo {
     margin: 0 auto;
     font-size: 32px;
-    padding: 10px; 
+    padding: 10px;
 }
+
 
 /* -------- page content styles ----------- */
 
 .left {
-    float:left; 
-    width:33%;
+    float: left;
+    width: 33%;
     padding-bottom: 35px;
-    
 }
 
 .details {
@@ -118,135 +123,132 @@ h1 {
 }
 
 .about-text {
-    padding:0 15px;
+    padding: 0 15px;
 }
 
+
 /* -------------- Footer styles ---------------*/
+
 footer {
     width: 100%;
-    height:150px;
+    height: 150px;
     padding: 30px;
     position: absolute;
-    bottom:0;
-    
+    bottom: 0;
 }
 
 .social-icons {
-    float:right;
-    padding:0 20px 20px 0;
+    float: right;
+    padding: 0 20px 20px 0;
 }
 
 #social {
-    border-top:10px solid #4285f4;
-    
+    border-top: 10px solid #4285f4;
 }
+
 #social li {
-    
-    display:inline-block;
+    display: inline-block;
 }
 
 #social li img {
-  width: 64px;
-  height: 64px;
-  -webkit-box-reflect: below 2px
-  -webkit-gradient(linear, left top, left bottom, from(transparent),
-  color-stop(0.7, transparent), to(rgba(255,255,255,.5))); /* reflection is supported by webkit only */
-  -webkit-transition: all 0.3s;
-  -webkit-transform-origin: 50% 100%;
+    width: 64px;
+    height: 64px;
+    -webkit-box-reflect: below 2px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.7, transparent), to(rgba(255, 255, 255, .5)));
+    /* reflection is supported by webkit only */
+    -webkit-transition: all 0.3s;
+    -webkit-transform-origin: 50% 100%;
 }
 
-#social li:hover img { 
-  -webkit-transform: scale(2);
-  margin: 0 2em;
-  border: 0.1px solid red;
-  border-radius: 5.5px;
-  background-color: #4285f4;
-  background-clip: inherit;
+#social li:hover img {
+    -webkit-transform: scale(2);
+    margin: 0 2em;
+    border: 0.1px solid red;
+    border-radius: 5.5px;
+    background-color: #4285f4;
+    background-clip: inherit;
 }
 
-#social li:hover + li img,
+#social li:hover+li img,
 #social li.prev img {
-  -webkit-transform: scale(1.5);
-  margin: 0 1.5em;
+    -webkit-transform: scale(1.5);
+    margin: 0 1.5em;
 }
-
 
 .rotate {
     transform: rotate(90deg);
     /*transform: rotate(180deg);*/
     transition: .3s;
 }
+
 .rotate-initial {
     transform: rotate(0deg);
     transition: .3s;
 }
 
 .clearfix:after {
-  visibility: hidden;
-  display: block;
-  content: "";
-  clear: both;
-  height: 0; }
+    visibility: hidden;
+    display: block;
+    content: "";
+    clear: both;
+    height: 0;
+}
 
 
-/* -------- Styles for tablet size devices ---------- */ 
+/* -------- Styles for tablet size devices ---------- */
+
 @media all and (max-width: 800px) {
-   html { font-size: 120%; }
-    
-   /* -------- navigation styles ---------- */   
-    
-  .aa-navbar {
-    padding: 0;
- }
-  .aa-navLinks {
-    justify-content: space-around;
-  }
+    html {
+        font-size: 120%;
+    }
+    /* -------- navigation styles ---------- */
+    .aa-navbar {
+        padding: 0;
+    }
+    .aa-navLinks {
+        justify-content: space-around;
+    }
 }
 
 
-/* -------- Styles for mobiles ---------- */ 
+/* -------- Styles for mobiles ---------- */
+
 @media all and (max-width: 600px) {
-   html { font-size: 112%; }
-    
-/* -------- navigation styles ---------- */
-  .aa-navLinks {
-    -webkit-flex-flow: column wrap;
-    flex-flow: column wrap;
-    padding: 0;
-    width: 400px;
-}
-  
-  .aa-navLinks a { 
-    text-align: center; 
-    padding: 10px;
-    border-top: 1px solid rgba(255,255,255,0.3); 
-    border-bottom: 1px solid rgba(0,0,0,0.1); 
-  }
-  
-  .aa-navLinks li:last-of-type a {
-    border-bottom: none;
-  }
-    
-   #aa-headerImg {
-        display:block;
-        float:none;
+    html {
+        font-size: 112%;
+    }
+    /* -------- navigation styles ---------- */
+    .aa-navLinks {
+        -webkit-flex-flow: column wrap;
+        flex-flow: column wrap;
+        padding: 0;
+        width: 400px;
+    }
+    .aa-navLinks a {
+        text-align: center;
+        padding: 10px;
+        border-top: 1px solid rgba(255, 255, 255, 0.3);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    .aa-navLinks li:last-of-type a {
+        border-bottom: none;
+    }
+    #aa-headerImg {
+        display: block;
+        float: none;
         margin: 0 auto;
-
     }
-    
     #aa-headerInfo {
-        display:block;
+        display: block;
     }
-    
-/* -------------- Footer styles ---------------*/
-  footer {
-    width: 100%;
-    height:150px;
-    margin: 0 auto;
-    padding: 10px;
-}
-  .social-icons {
-    float:none;
-    margin:0 auto;
-}
+    /* -------------- Footer styles ---------------*/
+    footer {
+        width: 100%;
+        height: 150px;
+        margin: 0 auto;
+        padding: 10px;
+    }
+    .social-icons {
+        float: none;
+        margin: 0 auto;
+    }
 }
