--- a/styles/playground.css
+++ b/styles/playground.css
@@ -2,20 +2,25 @@
     padding-left: 2rem;
 }
 
+
 /*-------- Flexbox styles --------*/
+
 .flexContainer {
     border: 1px solid black;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
 }
 
-.flexContainer > div {
+
+/*.flexContainer>div {
     flex: 1;
-}
+} */
+
 
 /*--------- Form styles ----------*/
+
 .taskListForm {
-    padding:15px; 
+    padding: 15px;
 }
 
 .formBox {
@@ -28,7 +33,7 @@
     word-wrap: break-word;
     background-color: #fff;
     background-clip: border-box;
-    border: 1px solid rgba(0,0,0,.125);
+    border: 1px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
 }
 
@@ -39,67 +44,99 @@
 }
 
 .form-inline {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-flow: row wrap;
-      flex-flow: row wrap;
-  -ms-flex-align: center;
-      align-items: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .form-inline .form-check {
-  width: 100%;
+    width: 100%;
+}
+
+.rightDiv {
+    background: #f4F4F4;
+    padding: 25px;
+}
+
+#colorChangeOutput {
+    padding: 25px;
 }
 
 
-/* -------- Styles for tablet size devices ---------- */ 
+/* -------- Styles for tablet size devices ---------- */
+
 @media all and (max-width: 800px) {
-   html { font-size: 120%; }
-    
- /* -------- navigation styles ---------- */   
-  .nav-links {
-    justify-content: space-around;
-  }
+    html {
+        font-size: 120%;
+    }
+    /* -------- navigation styles ---------- */
+    .nav-links {
+        justify-content: space-around;
+    }
 }
 
 
-/* -------- Styles for mobiles ---------- */ 
+/* -------- Styles for mobiles ---------- */
+
 @media all and (max-width: 600px) {
-   html { font-size: 112%; }
-    
-    .form-inline label {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-        align-items: center;
-    -ms-flex-pack: center;
-        justify-content: center;
-    margin-bottom: 0;
-  }
-  .form-inline .form-group {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex: 0 0 auto;
-        flex: 0 0 auto;
-    -ms-flex-flow: row wrap;
+    html {
+        font-size: 112%;
+    }
+    .flexContainer {
+        flex-wrap: wrap;
+        -ms-flex-flow: row wrap;
         flex-flow: row wrap;
-    -ms-flex-align: center;
+        -ms-flex-align: center;
         align-items: center;
-    margin-bottom: 0;
-  }
-  .form-inline .form-control {
-    display: inline-block;
-    width: auto;
-    vertical-align: middle;
-  }
-  .form-inline .form-control-plaintext {
-    display: inline-block;
-  }
-  .form-inline .input-group {
-    width: auto;
-  }
-  .form-inline .form-control-label {
-    margin-bottom: 0;
-    vertical-align: middle;
-  }
+    }
+    .leftDiv {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .middleDiv {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .rightDiv {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .form-inline label {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        margin-bottom: 0;
+    }
+    .form-inline .form-group {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex: 0 0 auto;
+        flex: 0 0 auto;
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+        -ms-flex-align: center;
+        align-items: center;
+        margin-bottom: 0;
+    }
+    .form-inline .form-control {
+        display: inline-block;
+        width: auto;
+        vertical-align: middle;
+    }
+    .form-inline .form-control-plaintext {
+        display: inline-block;
+    }
+    .form-inline .input-group {
+        width: auto;
+    }
+    .form-inline .form-control-label {
+        margin-bottom: 0;
+        vertical-align: middle;
+    }
 }
